# fastapi_course

./: .env  .gitignore  alembic.ini  main.py  pyproject.toml
app/: hashing.py  oauth.py  schemas.py  token.py
app/db/: database.py  models.py
app/repository/: auth.py  user.py
app/routers/: auth.py  user.py
core/: config.py
migrations/: README  env.py
migrations/versions/: 560038f37a66_crear_modelos.py  8289e01f9a6d_elimina_el_estado2.py
test/: test_api.py
